--- a/map_merge/package.xml
+++ b/map_merge/package.xml
@@ -20,6 +20,8 @@
   <depend>nav_msgs</depend>
   <depend>map_msgs</depend>
   <depend>tf2_geometry_msgs</depend>
+  <depend>tf2</depend>
+  <depend>tf2_ros</depend>
   <!-- used to get OpenCV -->
   <depend>image_geometry</depend>
 
