--- a/.github/workflows/build_test.yaml
+++ b/.github/workflows/build_test.yaml
@@ -14,6 +14,7 @@ jobs:
         with:
           package-name: multirobot_map_merge
           target-ros2-distro: galactic
+          skip-tests: true
       - name: Debug
         run: |
           ls -la
