--- a/.github/workflows/build_test.yaml
+++ b/.github/workflows/build_test.yaml
@@ -17,5 +17,6 @@ jobs:
           skip-tests: true
       - name: Debug
         run: |
+          source /opt/ros/galactic/setup.sh && source ros_ws/install/setup.sh
           cd ros_ws/build/multirobot_map_merge
           ./test_merging_pipeline
