Add to actions explore_lite test

--- a/.github/workflows/build_test.yaml
+++ b/.github/workflows/build_test.yaml
@@ -15,8 +15,18 @@ jobs:
           package-name: multirobot_map_merge
           target-ros2-distro: galactic
           skip-tests: true
-      - name: Run gtests manually
+      - name: Run gtests manually multirobot_map_merge
         run: |
           source /opt/ros/galactic/setup.sh && source ros_ws/install/setup.sh
           cd ros_ws/build/multirobot_map_merge
           ./test_merging_pipeline
+      - uses: ros-tooling/action-ros-ci@v0.2
+        with:
+          package-name: explore_lite
+          target-ros2-distro: galactic
+          skip-tests: true
+      - name: Run gtests manually explore_lite
+        run: |
+          source /opt/ros/galactic/setup.sh && source ros_ws/install/setup.sh
+          cd ros_ws/build/explore_lite
+          ./test_explore
