Feature add frontiers publisher

--- a/explore/config/params.yaml
+++ b/explore/config/params.yaml
@@ -2,6 +2,7 @@
   ros__parameters:
     robot_base_frame: base_link
     return_to_init: true
+    move_base_control: true
     costmap_topic: map
     costmap_updates_topic: map_updates
     visualize: true
