--- a/.github/workflows/build_test.yaml
+++ b/.github/workflows/build_test.yaml
@@ -9,7 +9,7 @@ jobs:
         ros_distribution:
           - foxy
           - galactic
-          - humble
+          # - humble
         include:
           # Foxy Fitzroy (June 2020 - May 2023)
           - docker_image: ubuntu:focal
@@ -18,8 +18,8 @@ jobs:
           - docker_image: ubuntu:focal
             ros_distribution: galactic
           # Humble Hawksbill (May 2022 - May 2027)
-          - docker_image: ubuntu:jammy
-            ros_distribution: humble
+          # - docker_image: ubuntu:jammy
+          #   ros_distribution: humble
     container:
       image: ${{ matrix.docker_image }}
     steps:
