--- a/.github/workflows/build_test.yaml
+++ b/.github/workflows/build_test.yaml
@@ -27,6 +27,8 @@ jobs:
         uses: ros-tooling/setup-ros@v0.4
         with:
           required-ros-distributions: ${{ matrix.ros_distribution }}
+      - name: Checkout repository
+        uses: actions/checkout@v3
       - name: build multirobot_map_merge and explore_lite
         uses: ros-tooling/action-ros-ci@v0.2
         with:
