--- a/.github/workflows/build_test.yaml
+++ b/.github/workflows/build_test.yaml
@@ -3,7 +3,7 @@ on:
   pull_request:
 jobs:
   build_and_tests:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu:20.04
     strategy:
       matrix:
         ros_distribution:
