--- a/.github/workflows/build_test.yaml
+++ b/.github/workflows/build_test.yaml
@@ -37,8 +37,8 @@ jobs:
           skip-tests: true
       - name: Run gtests manually multirobot_map_merge
         run: |
-          source /opt/ros/${{ matrix.ros_distribution }}/setup.sh
-          source ros_ws/install/setup.sh
+          . /opt/ros/${{ matrix.ros_distribution }}/setup.sh
+          . ros_ws/install/setup.sh
           cd ros_ws/build/multirobot_map_merge
           ./test_merging_pipeline
       - name: Run gtests manually explore_lite
