--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,7 +2,7 @@
 	"name": "Dev container",
 	"dockerComposeFile": "docker-compose.yml",
 	"service": "m-explore-ros2-humble",
-	"workspaceFolder": "/workspace",
+	"workspaceFolder": "/workspace/ros_ws",
 	"runArgs": [
 		"--runtime=nvidia"
 	],
