--- a/explore/config/params.yaml
+++ b/explore/config/params.yaml
@@ -2,13 +2,13 @@
   ros__parameters:
     robot_base_frame: base_link
     return_to_init: true
-    costmap_topic: map
-    costmap_updates_topic: map_updates
+    costmap_topic: /map
+    costmap_updates_topic: /map_updates
     visualize: true
     planner_frequency: 0.15
-    progress_timeout: 30.0
-    potential_scale: 3.0
-    orientation_scale: 0.0
-    gain_scale: 1.0
+    progress_timeout: 30.0 # Maybe too low, the planner is sometime really slow
+    potential_scale: 3.0 # TODO: adjust
+    orientation_scale: 0.0 # Not used
+    gain_scale: 1.0 # TODO: adjust
     transform_tolerance: 0.3
     min_frontier_size: 0.75
