--- a/.github/workflows/build_test.yaml
+++ b/.github/workflows/build_test.yaml
@@ -1,36 +1,31 @@
-name: ROS2 build/tests 
+name: ROS2 build/tests
 on:
   pull_request:
 jobs:
   build_and_tests:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-24.04
     strategy:
       matrix:
         ros_distribution:
-          - foxy
-          - galactic
           - humble
+          - jazzy
         include:
-          # Foxy Fitzroy (June 2020 - May 2023)
-          - docker_image: ubuntu:focal
-            ros_distribution: foxy
-          # Galactic Geochelone (May 2021 - November 2022)
-          - docker_image: ubuntu:focal
-            ros_distribution: galactic
-          # Humble Hawksbill (May 2022 - May 2027)
+          # https://dlu.github.io/ros_clock/index.html
           - docker_image: ubuntu:jammy
             ros_distribution: humble
+          - docker_image: ubuntu:noble
+            ros_distribution: jazzy
     container:
       image: ${{ matrix.docker_image }}
     steps:
       - name: setup ROS environment
-        uses: ros-tooling/setup-ros@v0.4
+        uses: ros-tooling/setup-ros@v0.7
         with:
           required-ros-distributions: ${{ matrix.ros_distribution }}
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: build multirobot_map_merge and explore_lite
-        uses: ros-tooling/action-ros-ci@v0.2
+        uses: ros-tooling/action-ros-ci@v0.4
         with:
           package-name: multirobot_map_merge explore_lite
           target-ros2-distro: ${{ matrix.ros_distribution }}
